System plugin: Switched to Python's built-in platform module

--- a/templates/default.html
+++ b/templates/default.html
@@ -92,6 +92,10 @@
 						<td>Distribution</td>
 						<td>{{ system.distribution }}</td>
 					</tr>
+                    <tr>
+                        <td>Platform</td>
+                        <td>{{ system.platform }}</td>
+                    </tr>
 					<tr>
 						<td>Kernel Version</td>
 						<td>{{ system.kernel_version }}</td>
@@ -104,6 +108,10 @@
 						<td>Architecture</td>
 						<td>{{ system.architecture }}</td>
 					</tr>
+                    <tr>
+                        <td>Machine</td>
+                        <td>{{ system.machine }}</td>
+                    </tr>
 				</table>
 				{% endif %}
 			
